# MCP-weather-plus-math

./: README.md  mathserver.py  mcpclient.py  pyproject.toml  run_mcp.py
clients/: mcpclient.py
servers/: weather.py
